# django-genericfkadmin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
example/: README.md  manage.py
example/app/: admin.py  models.py
example/app/migrations/: 0001_initial.py
example/base/: admin.py  models.py
example/base/migrations/: 0001_initial.py
example/customize_form/: admin.py  apps.py  models.py
example/customize_form/migrations/: 0001_initial.py
example/example/: settings.py  urls.py
example/filter/: admin.py  models.py
example/filter/migrations/: 0001_initial.py
genfkadmin/: admin.py  fields.py  forms.py
tests/: conftest.py  factories.py  models.py  test_admin.py  test_forms.py
