[project]
name = "django-genfkadmin"
version = "0.1.4"
description = "No frills GenericForeignKeys for your Django Admin"
readme = "README.md"
authors = [
  {name = "Michael Spallino", email = "mikehspallino@gmail.com"},
]
maintainers = [
  {name = "Michael Spallino", email = "mikehspallino@gmail.com"},
]
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/mikespallino/django-genericfkadmin"
Issues = "https://github.com/mikespallino/django-genericfkadmin/issues"

[tool.isort]
profile = "black"
line_length = 79

[tool.tox]
skip_missing_interpreters = true
requires = [
  "tox>=4",
]

[tool.uv.sources]
django-genfkadmin = { workspace = true }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests/",
]
addopts = "--create-db --no-migrations"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "factory-boy>=3.3.3",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.15.2",
    "twine>=6.2.0",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"
